@@ -31,6 +31,8 @@ module ActiveHash
           :foreign_key => association_id.to_s.foreign_key
         }.merge(options)
 
+        field options[:foreign_key].to_sym
+
         define_method(association_id) do
           options[:class_name].constantize.find_by_id(send(options[:foreign_key]))
         end
